# anitomy

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
anitomy/: anitomy.cpp  anitomy.h  element.cpp  element.h  keyword.cpp  keyword.h  options.h  parser.cpp  parser.h  parser_helper.cpp  parser_number.cpp  string.cpp  string.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
include/: CMakeLists.txt  anitomy.hpp
include/anitomy/: bracket.hpp  cli.hpp  container.hpp  element.hpp  format.hpp  json.hpp  keyword.hpp  options.hpp  parser.hpp  print.hpp  string.hpp  token.hpp  tokenizer.hpp  unicode.hpp  util.hpp  version.hpp
include/anitomy/detail/: container.hpp  delimiter.hpp  element.hpp  format.hpp  json.hpp  keyword.hpp  parser.hpp  token.hpp  tokenizer.hpp  unicode.hpp  util.hpp
include/anitomy/detail/json/: parser.hpp  serializer.hpp  value.hpp
include/anitomy/detail/parser/: anime_season.hpp  anime_title.hpp  anime_year.hpp  episode.hpp  episode_number.hpp  episode_title.hpp  file_checksum.hpp  file_extension.hpp  keywords.hpp  season.hpp  (+6 more)
include/anitomy/parser/: anime_season.hpp  anime_title.hpp  anime_year.hpp  episode_number.hpp  episode_title.hpp  file_checksum.hpp  file_extension.hpp  keywords.hpp  release_group.hpp  video_resolution.hpp  volume_number.hpp
src/: CMakeLists.txt  anitomy.cpp  element.cpp  keyword.cpp  main.cpp  parser.cpp  parser_helper.cpp  parser_number.cpp  string.cpp  token.cpp  tokenizer.cpp  util.cpp
test/: CMakeLists.txt  data.json  main.cpp
(+3 files in other folders)
